--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,31 @@ body {
   margin: 0px;
 }
 
+#inventory-div{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #745403;
+  height:80px;
+  width:480px;
+  border: 1px solid #0a0a23;
+  margin: 0px;
+}
+
+.inventory-item{
+  background-color: #ffffff;
+  height:50px;
+  width:100px;
+  border: 1px solid #0a0a23;
+}
+
+.box-title{
+  color: #0a0a23;
+  padding: 10px;
+  margin: 0px;
+}
+
 #game {
   max-width: 500px;
   max-height: 1000px;
@@ -55,4 +80,10 @@ button {
   background-color: #feac32;
   background-image: linear-gradient(#fecc4c, #ffac33);
   border: 3px solid #feac32;
+}
+
+audio{
+  position: absolute;
+  top:0;
+  left:0;
 }
